Remove right margin from input, select, and textarea styling. Fixes IE11 input type=file scrollbar issue.

--- a/src/scss/grommet-core/_base.input.scss
+++ b/src/scss/grommet-core/_base.input.scss
@@ -1,4 +1,4 @@
-// (C) Copyright 2014-2015 Hewlett Packard Enterprise Development LP
+// (C) Copyright 2014-2016 Hewlett Packard Enterprise Development LP
 
 .grommet {
   input,
@@ -12,7 +12,7 @@
     border: $input-border-width solid $border-color;
     border-radius: $border-radius;
     outline: none;
-    margin-right: halve($inuit-base-spacing-unit);
+    // margin-right: halve($inuit-base-spacing-unit);
     background-color: transparent; // inherit; doesn't work on IE
 
     .grommet.rtl & {
